# monkalytics

./: .env.example  .gitignore  Cargo.toml  docker-compose.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: config.rs  main.rs
backend/src/api/: mod.rs  twitch.rs
backend/src/db/: connection.rs  mod.rs  schema.rs
backend/src/dtos/: mod.rs  twitch_game_dto.rs  twitch_stream_dto.rs
backend/src/entities/: game.rs  mod.rs  stream.rs
backend/src/repositories/: game_repository.rs  mod.rs  stream_repository.rs
backend/src/services/: game_service.rs  mod.rs  stream_service.rs
src/: config.rs  main.rs
src/api/: twitch.rs
src/db/: schema.rs
